<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">qiribu</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_continue">Continue</string>
<string name="msg_days_until_payd3">Days until Payday - August</string>
<string name="lbl_13_ugx">.13 UGX</string>
<string name="msg_days_until_payd2">Days until Payday - </string>
<string name="lbl_failure_one">failure One</string>
<string name="lbl_cashout_success">cashout success</string>
<string name="msg_home_dash_rt">Home/Dash - RT no dropdown</string>
<string name="lbl_email_address">Email Address</string>
<string name="msg_confirm_passwor">Confirm Password</string>
<string name="lbl_cashout_two">Cashout Two</string>
<string name="lbl2">************</string>
<string name="msg_settings_edit">Settings - edit password</string>
<string name="lbl_salary">Salary </string>
<string name="msg_enter_password">Enter password to Delete</string>
<string name="lbl_first_name">First Name</string>
<string name="lbl_signup">Signup</string>
<string name="lbl_mobile_money">Mobile Money</string>
<string name="lbl_bezos">Bezos</string>
<string name="msg_hi_there_we_ha">Hi there, we have sent you a 4-digit OTP to your mobile number.</string>
<string name="lbl_new_password">New Password</string>
<string name="lbl_airtel">Airtel</string>
<string name="msg_create_a_qiribu">Create a Qiribu
Account</string>
<string name="lbl_payday_deposit">Payday Deposit</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_256_940003000">+256 940003000</string>
<string name="msg_amount_10_300">Amount - 10,300 UGX</string>
<string name="msg_we_would_hate_t">We would hate to see you go. Note this process is irriversible and would require your password as confirmation to delete your account.</string>
<string name="lbl_edit_password">Edit Password</string>
<string name="lbl_log_out">Log-out</string>
<string name="lbl_sign_in">Sign-in</string>
<string name="lbl_select_a_reason">Select a reason</string>
<string name="msg_256_mobile_n">+256 | Mobile Number</string>
<string name="msg_complete_cash_o">Complete Cash-out</string>
<string name="lbl_qiribu_fees">Qiribu fees</string>
<string name="msg_what_if_any_day">What if any day could be payday?</string>
<string name="msg_days_until_payd">Days until Payday - 8-days</string>
<string name="lbl_35_000_ugx">35,000 UGX</string>
<string name="msg_transaction_his">Transaction history</string>
<string name="msg_add_email_addre">Add Email address</string>
<string name="msg_hi_there_jeffe">Hi, there Jeffery </string>
<string name="msg_forgot_password">Forgot password? | Sign up</string>
<string name="lbl_10_000_00_ugx">10,000.00 UGX</string>
<string name="lbl_are_you_sure">Are you Sure?</string>
<string name="lbl_8_days">8-days</string>
<string name="lbl_account_id">Account ID</string>
<string name="lbl_fees_apply">Fees apply</string>
<string name="msg_you_are_all_set">You are all set, we have verified your number.</string>
<string name="msg_scan_national_i">Scan National ID</string>
<string name="lbl_verification">Verification</string>
<string name="lbl_5_000">5,000</string>
<string name="msg_verify_your_num">Verify your number and enter OTP</string>
<string name="msg_transaction_fee">Transaction fees</string>
<string name="lbl_10_000_ugx">10,000 UGX</string>
<string name="lbl_failure">failure</string>
<string name="lbl_enter_amount">Enter Amount</string>
<string name="lbl_old_password">Old Password</string>
<string name="msg_account_verifie2">Account verified</string>
<string name="msg_this_would_be_q">This would be Quick</string>
<string name="lbl_60_000">60,000</string>
<string name="lbl_00_ugx">.00 UGX</string>
<string name="lbl_or_sign_up_with">Or Sign up with</string>
<string name="lbl_tel_required">Tel (Required)</string>
<string name="lbl_last_name">Last Name</string>
<string name="msg_june_15th_0">June - 15th | 05:45pm</string>
<string name="lbl_jeffery">Jeffery</string>
<string name="lbl_verify_number">Verify Number</string>
<string name="msg_access_a_portio">Access a portion of your salary as soon as you\u2019ve earned it with 0% interest and no hidden fees.</string>
<string name="msg_onboarding_fou">Onboarding -Four</string>
<string name="lbl_try_again">Try again</string>
<string name="lbl_cashout_three">Cashout Three</string>
<string name="lbl_amount">Amount</string>
<string name="msg_something_went">Something went wrong</string>
<string name="msg_recent_transact">Recent Transactions</string>
<string name="lbl_44_516_13_ugx">44,516.13 UGX</string>
<string name="lbl_jeffery_bezos">Jeffery Bezos</string>
<string name="lbl_ugx">UGX</string>
<string name="lbl_august">August</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_60_000_ugx">60,000 UGX</string>
<string name="lbl_ugx2"> UGX</string>
<string name="msg_cashout_availab">Cashout available</string>
<string name="lbl_cashout_one">Cashout One</string>
<string name="lbl_password">Password</string>
<string name="msg_we_have_saved_t">We have saved the new entries you made.</string>
<string name="lbl_100_00_ugx2">100.00 UGX</string>
<string name="msg_your_payday_is">Your payday is Today!</string>
<string name="msg_settings_dele">Settings - Delete account</string>
<string name="msg_select_a_cash_o">Select a cash-out method</string>
<string name="lbl_cashout_amount">Cashout Amount</string>
<string name="msg">****   ****   ****   0349</string>
<string name="lbl_qiribu_card">Qiribu Card</string>
<string name="lbl_onboarding_one">Onboarding -One</string>
<string name="msg_cash_out_succes">Cash-out Successful</string>
<string name="msg_hmm_the_cash">Hmm... The cash could not be sent, please try again.</string>
<string name="msg_please_enter_th">Please enter the one time pin (OTP) sent to your phone via sms.</string>
<string name="msg_you_are_always">You are always ready!</string>
<string name="lbl_22">2</string>
<string name="msg_save_informatio">Save information</string>
<string name="msg_add_profile_pho">Add Profile photo</string>
<string name="lbl_loader">Loader</string>
<string name="lbl_100">100</string>
<string name="lbl_31st">31st</string>
<string name="msg_confirm_new_pas">Confirm New Password</string>
<string name="lbl_cashout2">Cashout</string>
<string name="lbl_create_account">Create Account</string>
<string name="lbl_change_password">Change Password</string>
<string name="lbl_registration">Registration</string>
<string name="msg_imagine_this_wi">Imagine this with us!</string>
<string name="msg_enter_national">Enter National ID No.</string>
<string name="msg_take_care_of_li">Take care of life\u2019s unexpected expenses responsibly by using our budgeting and financial\u2028planning tools.</string>
<string name="lbl_200_00_ugx">200.00 UGX</string>
<string name="lbl_account_number">Account Number</string>
<string name="lbl_13">.13</string>
<string name="msg_settings_edit2">Settings - edit payment methods</string>
<string name="lbl_get_started">Get Started</string>
<string name="lbl_30_000_ugx">30,000 UGX</string>
<string name="lbl_loading">Loading</string>
<string name="lbl_splash_screen">Splash screen</string>
<string name="msg_june_21st_0">June - 21st | 05:45pm</string>
<string name="msg_information_sav">Information saved</string>
<string name="msg_your_cash_is_on">Your cash is on it\u2019s way, just sit back and relax.</string>
<string name="msg_onboarding_thr">Onboarding -Three</string>
<string name="lbl_or_use_slider">Or use slider</string>
<string name="lbl_10_000">10,000</string>
<string name="lbl_12_649_00_ugx">12,649.00 UGX</string>
<string name="lbl_skip">Skip</string>
<string name="lbl_01st">01st</string>
<string name="lbl">&#128523;</string>
<string name="lbl_onboarding_two">Onboarding -Two</string>
<string name="msg_email_optional">Email (Optional)</string>
<string name="msg_we_are_sorry_we">We are sorry we could not save the entries made.</string>
<string name="msg_registration">Registration - payment info</string>
<string name="lbl_subalunaba_1">Subalunaba#1</string>
<string name="lbl_email">Email </string>
<string name="lbl_80">80%</string>
<string name="lbl_0">0</string>
<string name="lbl_cash_out2">Cash-Out</string>
<string name="lbl_1">1</string>
<string name="lbl_3">3</string>
<string name="lbl_00">.00</string>
<string name="lbl_4">4</string>
<string name="msg_sign_up_with_mo">Sign up with Mobile No.</string>
<string name="lbl_5">5</string>
<string name="lbl_resend_otp">Resend OTP</string>
<string name="lbl_6">6</string>
<string name="lbl_44_000_ugx">44,000 UGX</string>
<string name="lbl_or_sign_in_with">Or Sign-in with</string>
<string name="lbl_7">7</string>
<string name="lbl_8">8</string>
<string name="lbl_200">200</string>
<string name="lbl_9">9</string>
<string name="lbl_5_000_00_ugx">5,000.00 UGX</string>
<string name="msg_july_30th_0">July - 30th | 05:45pm</string>
<string name="msg_enter_payment_i">Enter Payment Info.</string>
<string name="msg_home_dash_rt2">Home/Dash - RT dropdown</string>
<string name="lbl_mtn">MTN</string>
<string name="lbl_info_saved">Info saved</string>
<string name="lbl_44_516">44,516</string>
<string name="msg_settings_add">Settings - add email</string>
<string name="lbl_sign_in2">Sign in</string>
<string name="lbl_welcome_back">Welcome back,</string>
<string name="lbl_select_bank">Select Bank</string>
<string name="lbl_settings">Settings</string>
<string name="lbl_0_ugx">0 UGX</string>
<string name="lbl_or">~ OR ~</string>
<string name="msg_jeffbezos_amazo">Jeffbezos@amazon.com</string>
<string name="lbl_delete_account">Delete Account</string>
<string name="msg_account_verifie">Account
Verified</string>
<string name="lbl_signup_one">Signup One</string>
<string name="msg_sign_up_with_em">Sign up with email</string>
<string name="lbl_10_300"> - 10,300</string>
<string name="msg_edit_payment_me">Edit payment method</string>
<string name="lbl_cash_out">Cash-out</string>
<string name="msg_enter_employee">Enter Employee reference No.</string>
<string name="msg_verification_on">Verification One</string>
<string name="lbl_bank_account">Bank Account</string>
<string name="msg_our_registratio">Our Registration process is very quick we promise.</string>
<string name="msg_please_enter_valid_mo_nu">Please enter valid mobile number</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
<string name="msg_please_enter_valid_nu">Please enter valid number</string>
<string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
<string name="lbl_error">Error</string>
</resources>
