<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="homeDashRtNoDropdownVM" type="com.qiribu.app.modules.homedashrtnodropdown.data.viewmodel.HomeDashRtNoDropdownVM"/>
    </data>
    <LinearLayout android:id="@+id/linearColumnrectangle"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_322pxv"
        android:layout_marginTop="@dimen/_38pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/frameStackrectangle"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_282pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_24pxh" android:layout_width="@dimen/_338pxh">
            <FrameLayout android:id="@+id/frameCreditCard"
                android:layout_gravity="bottom|center"
                android:layout_height="@dimen/_196pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_326pxh">
                <ImageView android:id="@+id/imageRectangle"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_196pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_rectangle"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle"/>
                <LinearLayout android:id="@+id/linearColumnpiffjenkins"
                    android:layout_gravity="bottom|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPiffJenkins"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{homeDashRtNoDropdownVM.homeDashRtNoDropdownModel.txtPiffJenkins}"
                        style="@style/txtLexendmedium18" tools:text="@string/lbl_jeffery_bezos"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txt0523"
                        android:layout_gravity="end"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_22pxh"
                        android:layout_marginStart="@dimen/_22pxh"
                        android:layout_marginTop="@dimen/_31pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{homeDashRtNoDropdownVM.homeDashRtNoDropdownModel.txt0523}"
                        style="@style/txtLexendmedium14_1" tools:text="@string/lbl_account_id"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtLanguage"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_22pxh"
                        android:layout_marginStart="@dimen/_22pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.08"
                        android:singleLine="true"
                        android:text="@{homeDashRtNoDropdownVM.homeDashRtNoDropdownModel.txtLanguage}"
                        style="@style/txtLexendmedium20_1" tools:text="@string/msg"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPrice"
                        android:layout_gravity="end"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_37pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{homeDashRtNoDropdownVM.homeDashRtNoDropdownModel.txtPrice}"
                        style="@style/txtLexendmedium22" tools:text="@string/lbl_44_516_13_ugx"/>
                </LinearLayout>
            </FrameLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_39pxv"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_39pxv"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowlanguageOne"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLanguageOne"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_weight="0.86"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@{homeDashRtNoDropdownVM.homeDashRtNoDropdownModel.txtLanguageOne}"
                        style="@style/txtLexendregular15_1" tools:text="@string/msg_hi_there_jeffe"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSix"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5pxh"
                        android:layout_weight="0.14"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@{homeDashRtNoDropdownVM.homeDashRtNoDropdownModel.txtSix}"
                        style="@style/txtLexendregular20" tools:text="@string/lbl"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <ImageView android:id="@+id/imageUser"
                android:layout_gravity="top|end"
                android:layout_height="@dimen/_87pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_width="@dimen/_87pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_user_4"
                tools:ignore="ContentDescription" tools:src="@drawable/img_user_4"/>
        </FrameLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearHomeDashRT"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <TextView android:ellipsize="end"
                android:id="@+id/txtDaysuntilPayd"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{homeDashRtNoDropdownVM.homeDashRtNoDropdownModel.txtDaysuntilPayd}"
                style="@style/txtLexendregular15_1" tools:text="@string/msg_days_until_payd3"/>
            <LinearLayout android:id="@+id/linearRow01st"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txt01st"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.51"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{homeDashRtNoDropdownVM.homeDashRtNoDropdownModel.txt01st}"
                    style="@style/txtLexendmedium10" tools:text="@string/lbl_01st"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt31st"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_285pxh"
                    android:layout_weight="0.49"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{homeDashRtNoDropdownVM.homeDashRtNoDropdownModel.txt31st}"
                    style="@style/txtLexendmedium10" tools:text="@string/lbl_31st"/>
            </LinearLayout>
            <ImageView android:gravity="center_horizontal"
                android:id="@+id/imageItem"
                android:layout_height="@dimen/_1pxh"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_item_deep_orange_51"
                tools:ignore="ContentDescription" tools:src="@drawable/img_item_deep_orange_51"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btn8days" android:layout_gravity="end"
                android:layout_height="@dimen/_33pxv"
                android:layout_marginEnd="@dimen/_69pxh"
                android:layout_marginStart="@dimen/_69pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="@dimen/_90pxh"
                android:paddingBottom="@dimen/_8pxv"
                android:paddingEnd="@dimen/_19pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@string/lbl_8_days"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_3" tools:text="@string/lbl_8_days"/>
            <LinearLayout android:id="@+id/linearRowlanguageTwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_34pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.28"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{homeDashRtNoDropdownVM.homeDashRtNoDropdownModel.txtLanguageTwo}"
                    style="@style/txtLexendregular15_1" tools:text="@string/lbl_salary"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPriceOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_159pxh"
                    android:layout_weight="0.72"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{homeDashRtNoDropdownVM.homeDashRtNoDropdownModel.txtPriceOne}"
                    style="@style/txtLexendregular22" tools:text="@string/lbl_60_000_ugx"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowcashoutavailab"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCashoutavailab"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.49"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{homeDashRtNoDropdownVM.homeDashRtNoDropdownModel.txtCashoutavailab}"
                    style="@style/txtLexendregular15_1" tools:text="@string/msg_cashout_availab"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPriceTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_57pxh"
                    android:layout_weight="0.51"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{homeDashRtNoDropdownVM.homeDashRtNoDropdownModel.txtPriceTwo}"
                    style="@style/txtLexendregular22" tools:text="@string/lbl_44_516_13_ugx"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnCashout"
                android:layout_height="@dimen/_52pxv"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="@dimen/_132pxh"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_29pxh"
                android:paddingTop="@dimen/_18pxv"
                android:singleLine="true"
                android:text="@string/lbl_cash_out2"
                android:textAllCaps="false"
                style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_cash_out2"/>
            <Spinner
                android:background="@drawable/layer_list_bg_gray_50_radius_10"
                android:gravity="center_horizontal"
                android:id="@+id/spinnerGroup10598"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent" tools:listitem="@layout/spinner_item"/>
            <FrameLayout android:id="@+id/frameStackgroup10770"
                android:layout_height="@dimen/_81pxv"
                android:layout_marginTop="@dimen/_35pxv"
                android:layout_width="match_parent" style="@style/groupStylegray_51">
                <ImageView android:id="@+id/imageGroup10770"
                    android:layout_gravity="top|center"
                    android:layout_height="@dimen/_28pxh"
                    android:layout_marginBottom="@dimen/_20pxv"
                    android:layout_marginEnd="@dimen/_39pxh"
                    android:layout_marginStart="@dimen/_39pxh"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_width="@dimen/_292pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_group10770"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_group10770"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
