<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listellipsesixRowModel" type="com.qiribu.app.modules.transactionhistory.data.model.ListellipsesixRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearColumnellipsesix"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:id="@+id/linearRowprice"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:id="@+id/linearRowellipsesix"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.57" android:layout_width="0dp" android:orientation="horizontal">
                <View
                    android:background="@drawable/rectangle_bg_green_600_radius_4"
                    android:id="@+id/viewEllipseSix"
                    android:layout_height="@dimen/_8pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginTop="@dimen/_2pxv" android:layout_width="@dimen/_8pxh"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPaydayDeposit"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_weight="0.93"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{listellipsesixRowModel.txtPaydayDeposit}"
                    style="@style/txtLexendregular15_1" tools:text="@string/lbl_payday_deposit"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPriceOne1"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_91pxh"
                android:layout_weight="0.43" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{listellipsesixRowModel.txtPriceOne1}"
                style="@style/txtLexendregular15_1" tools:text="@string/lbl_60_000_ugx"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtPriceOne2"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{listellipsesixRowModel.txtPriceOne2}"
            style="@style/txtLexendregular12_2" tools:text="@string/msg_july_30th_0"/>
    </LinearLayout>
</layout>
